applications/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  type: NodePort
  ports:
    - name: homeassistant
      port: 8123
      targetPort: homeassistant
      nodePort: 8123
